--- a/webapp/WEB-INF/views/course/view-record.html
+++ b/webapp/WEB-INF/views/course/view-record.html
@@ -56,10 +56,10 @@
 				<div class="course-view-tap">
 					<ul>
 						<li>
-							<a href="./view-course.html" class="tabbtn selected">코스정보</a>
+							<a href="./view-course.html" class="tabbtn">코스정보</a>
 						</li>
 						<li>
-							<a href="./view-record.html" class="tabbtn">기록보기</a>
+							<a href="./view-record.html" class="tabbtn  selected">기록보기</a>
 						</li>
 					</ul>
 				</div>
