--- a/webapp/assets/css/course-view.css
+++ b/webapp/assets/css/course-view.css
@@ -90,6 +90,10 @@ input[type=radio] {display:none;}
 	height: 24px;
 	margin-right: 10px;
 }
+.course-info-content #bookmark {
+	position: relative;
+	top: 5px;
+}
 /* 이름, 글정보 */
 .course-info-content .article-info {
 	text-align: left;
@@ -128,15 +132,76 @@ input[type=radio] {display:none;}
 	margin-bottom: 15px;
 }
 /* 그래프 선택 버튼 */
-.record-status .graph-choose {float: right;}
-.record-status .graph-choose label {color: rgb(170, 170, 170); margin-left:5px;}
-.record-status .graph-choose input[type="radio"]:checked + label {color: black;	font-weight: 700;}
+.record-status .chart-choose {float: right;}
+.record-status .chart-choose label {color: rgb(170, 170, 170); margin-left:5px;}
+.record-status .chart-choose input[type="radio"]:checked + label {color: black;	font-weight: 700;}
 
-.record-status #graphs {
+.record-status #charts {
 	width: 100%;
 	height: 220px;
 	position: relative;
 }
+
+/* ---------------------모달창 공통----------------------- */
+.modal-header {text-align: center;}
+.modal-header .modal-title {
+	font-size: 18px;
+	font-weight: 700;
+	text-align: center;
+}
+.modal-dialog {
+	width: 300px;
+	height: auto;
+	position: fixed;
+	top: 20%;
+	left: 40%;
+	transform: translate(-50%, -50%);
+}
+.modal-body {
+	padding: 16px 24px;
+	text-align: left;
+}
+
+/* ---------------------코스제목 수정(모달창)----------------------- */
+.modal-body #title-update {
+	width: 100%;
+	height: 40px; 
+	font-size: 14px;
+}
+.modal-footer .btn-primary {
+	background-color: rgb(50, 108, 249);
+	color: rgb(255, 255, 255);
+}
+
+/* ---------------------즐겨찾기 추가(모달창)----------------------- */
+#bookmark-list .modal-header .modal-title {
+	display: inline-block;
+}
+#bookmark-list .modal-header img {
+	position:relative;
+	top: 5px;
+}
+#bookmark-list .modal-body ul li {
+	margin: 10px auto;
+	vertical-align: middle;
+}
+#bookmark-list .modal-body ul li div {
+	display: inline-block;
+}
+#bookmark-list .modal-body input[type="checkbox"] {
+	width: 20px;
+	height: 20px;
+	margin-right: 10px;
+	border-width: thick;
+	position: relative;
+	top: 1.5px;
+}
+#bookmark-list .modal-body label {
+	font-size: 15px;
+	position: relative;
+	top: -1.5px;
+}
+
 
 /* ===================================코스 정보==================================== */
 
