--- a/webapp/WEB-INF/views/includes/footer.html
+++ b/webapp/WEB-INF/views/includes/footer.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>발</title>
+<title>footer</title>
 <link rel="stylesheet" href="../../../assets/css/main.css">
 
 
@@ -18,9 +18,9 @@
 			<p>서울특별시 관악구 봉천동 862 - 1</p>
 			<br>
 			<p>고객센터 | 평일 9 : 30 ~ 18 : 30, 점심시간 : 12 : 00 ~ 13 : 00 (토, 일요일, 공휴일 휴무)</p>
-			<p>tel. 02 - 1111 - 1111</p>
-			<p>fax. 02 - 1111 - 1111</p>
-			<p>email. joa@joa.co.kr</p>
+			<p>Tel. 02 - 1111 - 1111</p>
+			<p>Fax. 02 - 1111 - 1111</p>
+			<p>Email. JOA@joa.co.kr</p>
 		</div>
 		<br>
 		<div class="footer-btn">
