--- a/webapp/WEB-INF/views/includes/header.html
+++ b/webapp/WEB-INF/views/includes/header.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>대가리</title>
+	<title>main</title>
 	<link rel="stylesheet" href="../../../assets/css/main.css">
 </head>
 <body>
